// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAccount renders CreateAccount component 1`] = `
<div>
  <h2>
    Quick Checkout When You Return
  </h2>
  <p>
    Set a password and save your information for next time in one easy step!
  </p>
  <FormError
    errors={Array []}
  />
  <form
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div>
      <label>
        First Name
      </label>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="given-name"
            name="customer.firstname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Avatar"
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <label>
        Last Name
      </label>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="family-name"
            name="customer.lastname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Aang"
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <label>
        Email
      </label>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="email"
            name="customer.email"
            onBlur={[Function]}
            onChange={[Function]}
            value="thelastairbender@example.com"
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <label>
        Password
      </label>
      <span
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="new-password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span />
        <span>
          <button
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p />
    </div>
    <div>
      <label>
        <input
          checked={false}
          name="subscribe"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span>
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span>
          Subscribe to news and updates
        </span>
      </label>
      <p />
    </div>
    <div>
      <button
        disabled={false}
        type="submit"
      >
        <span>
          Create Account
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateAccount renders errors 1`] = `
<div>
  <h2>
    Quick Checkout When You Return
  </h2>
  <p>
    Set a password and save your information for next time in one easy step!
  </p>
  <FormError
    errors={
      Array [
        [Error: Oops.],
      ]
    }
  />
  <form
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div>
      <label>
        First Name
      </label>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="given-name"
            name="customer.firstname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Avatar"
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <label>
        Last Name
      </label>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="family-name"
            name="customer.lastname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Aang"
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <label>
        Email
      </label>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="email"
            name="customer.email"
            onBlur={[Function]}
            onChange={[Function]}
            value="thelastairbender@example.com"
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <label>
        Password
      </label>
      <span
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="new-password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span />
        <span>
          <button
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p />
    </div>
    <div>
      <label>
        <input
          checked={false}
          name="subscribe"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span>
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span>
          Subscribe to news and updates
        </span>
      </label>
      <p />
    </div>
    <div>
      <button
        disabled={false}
        type="submit"
      >
        <span>
          Create Account
        </span>
      </button>
    </div>
  </form>
</div>
`;
